// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds packages from subproject NodePackages 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

packages:
  - some/where/standalone
  - subprojects/*
  - subprojects/subproject-b/subproject
"
`;

exports[`dedupes packages 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

packages:
  - a
"
`;

exports[`defaults 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

packages: []
"
`;

exports[`sorts packages 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

packages:
  - a
  - b
"
`;

exports[`with filename 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

packages: []
"
`;

exports[`with packages 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

packages:
  - apple
  - banana
"
`;
